[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://Scripts/Part2/ChapterSummary.gd" id="1_summary"]

[node name="ChapterSummary" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_summary")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.02, 0.05, 0.1, 0.8)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -250.0
offset_right = 400.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 40.0
offset_right = -40.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="TitleLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "CHAPTER COMPLETE"
horizontal_alignment = 1

[node name="OverviewLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "สิ่งทื่ได้เรียนรู้ในวันนี้:"
horizontal_alignment = 1

[node name="LessonLabel" type="Label" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "Health lesson description goes here..."
horizontal_alignment = 1
autowrap_mode = 3

[node name="RewardLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0, 1)
text = "Rewards: +2 SP"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ContinueBtn" type="Button" parent="Panel/VBox"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
size_flags_horizontal = 4
text = "ยอมรับความรู้และเดินทางต่อ"
